panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_add_signed_char.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_add_signed_char.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_add_signed_char.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration a~2 `signed char` 90)
         (declaration b~3 `signed char` 110)
         (declaration result~4 `int` (add (name a~2 `signed char`) (name b~3 `signed char`)))
         (return (name result~4 `int`)))))

----- stderr -----
