panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_argv_with_unnamed_argc.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_argv_with_unnamed_argc.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_argv_with_unnamed_argc.c"
   (declaration strlen~0 `fn(∅: ptr<char const>) -> unsigned long` ∅)
   (function-definition
      main~1 `fn(∅: int, argv: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~3 `int`
         argv~4 `ptr<ptr<char>>`)
      (compound-statement
         (return
            (call (name strlen~0 `fn(∅: ptr<char const>) -> unsigned long`)
               (deref (add (name argv~4 `ptr<ptr<char>>`) 1)))))))

----- stderr -----
