panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_assignment_from_parenthesised_implicit_conversion.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_assignment_from_parenthesised_implicit_conversion.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_assignment_from_parenthesised_implicit_conversion.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration a~2 `unsigned int` 27)
         (expression (assign (name a~2 `unsigned int`) 42))
         (return (name a~2 `unsigned int`)))))

----- stderr -----
