panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_assignment_from_variable.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_assignment_from_variable.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_assignment_from_variable.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration a~2 `int` 0)
         (declaration b~3 `int` 42)
         (expression (assign (name b~3 `int`) (name a~2 `int`)))
         (return (name b~3 `int`)))))

----- stderr -----
