panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_assignment_to_char.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_assignment_to_char.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_assignment_to_char.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration a~2 `char` 1)
         (declaration b~3 `char` 2)
         (declaration c~4 `char` 42)
         (declaration d~5 `char` 3)
         (expression (assign (name b~3 `char`) 123))
         (return (name c~4 `char`)))))

----- stderr -----
