panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_char_local_variable.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_char_local_variable.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_char_local_variable.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration a~2 `char` 1)
         (declaration b~3 `char` 27)
         (declaration c~4 `char` 3)
         (declaration d~5 `char` 4)
         (return (name b~3 `char`)))))

----- stderr -----
