panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_comma.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_comma.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_comma.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn(∅: int, argv: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~3 `int`
         argv~4 `ptr<ptr<char>>`)
      (compound-statement
         (expression
            (comma
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (subscript (name argv~4 `ptr<ptr<char>>`) 1)
                  42)
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (subscript (name argv~4 `ptr<ptr<char>>`) 1)
                  27)))
         (expression
            (comma
               0
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (subscript (name argv~4 `ptr<ptr<char>>`) 1)
                  123)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~4 `ptr<ptr<char>>`) 1)
               (comma
                  (comma
                     (comma
                        0
                        42)
                     1)
                  (comma
                     2
                     3))))
         (return
            (comma
               (comma
                  0
                  1)
               2)))))

----- stderr -----
