panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_compound_assignment_only_evaluates_lhs_once.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_compound_assignment_only_evaluates_lhs_once.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_compound_assignment_only_evaluates_lhs_once.c"
   (declaration putchar~0 `fn(∅: int) -> int` ∅)
   (function-definition
      f~1 `fn(p: ptr<int>) -> ptr<int>`
      (params
         p~3 `ptr<int>`)
      (compound-statement
         (expression
            (call (name putchar~0 `fn(∅: int) -> int`)
               65))
         (expression
            (call (name putchar~0 `fn(∅: int) -> int`)
               10))
         (return (name p~3 `ptr<int>`))))
   (function-definition
      main~4 `fn() -> int`
      (compound-statement
         (declaration x~6 `int` 42)
         (expression
            (add-assign
               (deref
                  (call (name f~1 `fn(p: ptr<int>) -> ptr<int>`)
                     (addressof (name x~6 `int`))))
               27l))
         (return (name x~6 `int`)))))

----- stderr -----
