panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_compound_assignment_to_deref.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_compound_assignment_to_deref.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_compound_assignment_to_deref.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration x~2 `int` 42)
         (declaration p~3 `ptr<int>` (addressof (name x~2 `int`)))
         (expression (add-assign (deref (name p~3 `ptr<int>`)) 27l))
         (return (name x~2 `int`)))))

----- stderr -----
